--- a/src/Home.css
+++ b/src/Home.css
@@ -424,7 +424,7 @@ html, body {
   font-size: 15px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  color: rgb(159, 179, 255);;
+  color: #5b6cff;
   margin-bottom: 28px;
 }
 .enterprise-card.dark .section-subtitle {
